# kanue

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
crates/kanue-parse/: Cargo.toml
crates/kanue-parse/src/: lib.rs
notebooks/: 01_data_preparation.ipynb  02_baseline_nnue.ipynb  03_kan_nnue.ipynb  04_analysis.ipynb
src/kanue/: __init__.py
src/kanue/data/: __init__.py  loader.py  native.py
src/kanue/models/: __init__.py  baseline.py  kan.py  kan_layer.py
src/kanue/utils/: __init__.py  drive.py  training.py
tests/: test_models.py
tools/binpack-to-bullet/: Cargo.toml
tools/binpack-to-bullet/src/: main.rs
